feat: added search engine page and ep

--- a/ai_terms_semantic_search_engine/search_engine/templates/search.html
+++ b/ai_terms_semantic_search_engine/search_engine/templates/search.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Search Results</title>
 </head>
 <body>
-
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Run Search</button>
+</form>
 </body>
 </html>
